@@ -24,7 +24,8 @@ fi
 
 if test -z "$ONLY_WM"; then
   Xnest -ac :1 -scrns $SCREENS -geometry 640x480 -bw 15 &
-  usleep 500000
+  ## usleep 800000
+  sleep 1
 
   if test -n "$TEST_CLIENT"; then
     DISPLAY=:1 $TEST_CLIENT &
@@ -32,12 +33,14 @@ if test -z "$ONLY_WM"; then
 
   if test $CLIENTS != 0; then
     for I in `seq 1 $CLIENTS`; do
+      echo "Launching xterm $I"
       DISPLAY=:1 xterm -geometry 25x15 &
     done
   fi
 
   if test $SM_CLIENTS != 0; then
     for I in `seq 1 $SM_CLIENTS`; do
+      echo "Launching gnome-terminal $I"
       DISPLAY=:1 gnome-terminal --geometry 25x15 &
     done
   fi
